Cleaning warning messages from StyleResolveTree https://bugs.webkit.org/show_bug.cgi?id=123030

Patch by Thiago de Barros Lacerda <thiago.lacerda@openbossa.org> on 2013-10-18
Reviewed by Andreas Kling.

No new tests needed.

* style/StyleResolveTree.cpp:
(WebCore::Style::elementInsideRegionNeedsRenderer):
(WebCore::Style::createRendererIfNeeded):

Canonical link: https://commits.webkit.org/141113@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157652 268f45cc-cd09-0410-ab3c-d52691b4dbfc